test/sema/typeck/generic/no-type-params-on-generic-type.dora
class Bar[T]
fn f(_x: Bar) {}
